project/network policy/keycloak/deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: keycloak
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
